Migrate Flask to FastApi

--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,10 +1,14 @@
-Flask~=2.2.2
-Flask-SQLAlchemy
-gunicorn
+fastapi
+databases
+pydantic_settings
+typer
+uvicorn
 psycopg2-binary
 dependency-injector
-SQLAlchemy~=1.4.46
+SQLAlchemy
 virtualenv
 Werkzeug~=2.2.2
 jsonschema~=4.17.3
 Faker~=18.4.0
+asyncpg
+python-dotenv
