--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,14 +1,16 @@
-fastapi
+fastapi~=0.100.0
 databases
 pydantic_settings
-typer
+typer~=0.9.0
 uvicorn
 psycopg2-binary
 dependency-injector
-SQLAlchemy
+SQLAlchemy~=1.4.49
 virtualenv
 Werkzeug~=2.2.2
 jsonschema~=4.17.3
 Faker~=18.4.0
 asyncpg
-python-dotenv
+python-dotenv~=1.0.0
+pydantic~=2.0.3
+Flask~=2.2.5
