--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -19,5 +19,7 @@ RUN pip install -r requirements.txt
 # copy project
 COPY . /usr/src/app/
 
+CMD ["uvicorn", "project.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
