--- a/services/web/requirements.txt
+++ b/services/web/requirements.txt
@@ -1,10 +1,8 @@
 fastapi~=0.100.0
 databases
 pydantic_settings
-typer~=0.9.0
 uvicorn
 psycopg2-binary
-dependency-injector
 SQLAlchemy~=1.4.49
 virtualenv
 Werkzeug~=2.2.2
@@ -13,4 +11,5 @@ Faker~=18.4.0
 asyncpg
 python-dotenv~=1.0.0
 pydantic~=2.0.3
+starlette~=0.27.0
 Flask~=2.2.5
