--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - POSTGRES_USER=verbaquiz
       - POSTGRES_PASSWORD=verbaquiz
       - POSTGRES_DB=verbaquiz_dev
+    ports:
+      - "6543:5432"
 
 volumes:
   postgres_data:
